--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                     <div class="temp-inner">
                         <p class="temperature-symbols">°С / °F</p>
                         <p id="temperature-num">28°С / 87.3°F</p>
-                        <img src="/img/temp-images/01d.png" id="weatherImg">
+                        <img src="../img/temp-images/01d.png" id="weatherImg">
                     </div>
                     <div class="LDHW">
                         <p id="location">Ukraine Kyiv</p>
                         <p><i class="bi bi-calendar"></i><span id="day">Mon</span></p>
                         <p><i class="bi bi-droplet"></i><span id="humidity">Hum 73%</span></p>
-                        <p><img src="/img/temp-images/planet-earth.png" style="width:14px;" alt=""><span id="quality">48%</span></p>
+                        <p><img src="../img/temp-images/planet-earth.png" style="width:14px;" alt=""><span id="quality">48%</span></p>
                     </div>
                 </div>
             </div>
