--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="temp-inner">
                         <p class="temperature-symbols">°С / °F</p>
                         <p id="temperature-num">28°С / 87.3°F</p>
-                        <img src="../img/temp-images/01d.png" id="weatherImg">
+                        <img src="img/temp-images/01d.png" id="weatherImg">
                     </div>
                     <div class="LDHW">
                         <p id="location">Ukraine Kyiv</p>
@@ -42,6 +42,6 @@
         </div>
     </div>
     <script src="js/app.js"></script>
-    <script src="/js/loader.js"></script>
+    <script src="js/loader.js"></script>
 </body>
 </html>
