--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <p id="location">Ukraine Kyiv</p>
                         <p><i class="bi bi-calendar"></i><span id="day">Mon</span></p>
                         <p><i class="bi bi-droplet"></i><span id="humidity">Hum 73%</span></p>
-                        <p><img src="../img/temp-images/planet-earth.png" style="width:14px;" alt=""><span id="quality">48%</span></p>
+                        <p><img src="/img/temp-images/planet-earth.png" style="width:14px;" alt=""><span id="quality">48%</span></p>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
             </div>
         </div>
     </div>
-    <script src="js/app.js"></script>
     <script src="js/loader.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
