--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <title>Document</title>
+    <title>Weather</title>
 </head>
 <body>
     <div class="mask">
